* **v.7.9.9 Mod_v1.2.5#116**
* Add Root Rider
* Add Apprentice Warden
* Add Super Hog Rider
* Add OverGrowth Spell
* Add RootRider AttackCSV
* Fix Search Legend League Search
* Fix SuperTroops boost (recoded)
* Fix AutoUpgrade : Ignore UpgradeType Gem if read value = 0
* Fix autoupgrade : Place new wall
* Fix Training : Drag Left/Right on troops list
* Fix Training : OCR Troops Capacity on Army Train Tab
* Fix Training : OCR ArmyOverview read 18
* Fix Training : OCR Queue Troops read 6
* Fix Training : correct right coord check location to determine drag left/right
* Fix Training : TrainSiege (recoded)
* Fix AttackBar : Read Siege Level
* Fix BuilderBase : Open BuilderBase Tutorial
* Fix Donate : disable red icon check before donating
* Fix Typo : wrong shortname apprentice warden
* Improve : Autolocate Clan Castle
* ** NEW TROOPS ADDED, PLEASE USE CLEAN PROFILE **

* **v.7.9.9 Mod_v1.2.5#115**
* Fix OCR Queue read 1 as 11 on freeze
* ClanGames : Challenges image collection by @flacha
* ClanGames : Also search challenges on 3rd row
* ClanGames : Fix ocr score read 0 and 4
* Fix GL shifted pixel on check main screen