@@ -15,6 +15,7 @@
 * Fix Training : correct right coord check location to determine drag left/right
 * Fix Training : TrainSiege (recoded)
 * Fix AttackBar : Read Siege Level
+* Fix AttackBar : SiegeSwitch
 * Fix BuilderBase : Open BuilderBase Tutorial
 * Fix Donate : disable red icon check before donating
 * Fix Typo : wrong shortname apprentice warden
